Added functionality to log in with a username (button and input form),set this as a cookie (/login with res.cookie), and display 'Logged in as username' with cookie-parser and req.cookie within _header.ejs. Next step is to add logout functionality.

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,5 +10,20 @@
         <a class="nav-item nav-link" href="/urls_new">Create New URL</a>
       </div>
     </div>
+
+    <div> 
+      <% if (username) { %>
+      <div>
+        <span>Logged In As: <%= username %></span>
+        <button type="submit" class="btn btn-dark" >Logout</button>
+      </div>
+      <% } else {%>
+        <form class="form-inline" action="/login" method="POST">
+          <input class="form-control" type="text" name="username" placeholder="Username" style="width:  200px">
+          <button type="submit" class="btn btn-primary" >Login</button>
+        </form>
+      <% }; %>
+    </div>
+
   </nav>
 </header>
