Completed implementing the logout functionality using a post method in _header.ejs combined with an app.post and res.clearCookie in express_server.js

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,7 +15,9 @@
       <% if (username) { %>
       <div>
         <span>Logged In As: <%= username %></span>
-        <button type="submit" class="btn btn-dark" >Logout</button>
+        <form class="form-inline" action="/logout" method="POST">
+          <button type="submit" class="btn btn-dark" >Logout</button>
+        </form>
       </div>
       <% } else {%>
         <form class="form-inline" action="/login" method="POST">
