Added functionality to the register page: 1) it makes a post request and adds a user object to a users database including emails and password. 2)updated the cookie to use user_id rather than username 3)updated header to display the email of the registered person. 4) Auto logs in after registering.

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,9 +12,9 @@
     </div>
 
     <div> 
-      <% if (username) { %>
+      <% if (user) { %>
       <div>
-        <span>Logged In As: <%= username %></span>
+        <span>Logged In As: <%= user.email %></span>
         <form class="form-inline" action="/logout" method="POST">
           <button type="submit" class="btn btn-dark" >Logout</button>
         </form>
