--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,14 +3,14 @@
 <head>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <title>Registration - TinyApp Example</title>
+  <title>Login - TinyApp Example</title>
 </head>
 
 <body>
   <%- include('partials/_header'); %>
   <main style = "margin: 1em">
-    <h2>Register</h2>
-    <form action="/register" method="POST">
+    <h2>Login</h2>
+    <form action="/login" method="POST">
       <div class="mb-3">
         <label for="email" class="form-label">Enter Email address</label>
         <input class="form-control" type="email" name ="email" id="email" placeholder="example@domain.com" style="width: 300px">
