--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -9,7 +9,7 @@
 <body>
   <%- include('partials/_header'); %>
   <main style = "margin: 1em">
-    <h2>Register</h2>
+    <h2>Create Account</h2>
     <form action="/register" method="POST">
       <div class="mb-3">
         <label for="email" class="form-label">Enter Email address</label>
