--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,10 +16,12 @@
     <div> 
       <% if (user) { %>
       <div>
-        <span>Logged In As: <%= user.email %></span>
+        
         <form class="form-inline" action="/logout" method="POST">
+          <span style = "padding-right: 10px;">Logged In As: <%= user.email %></span>
           <button type="submit" class="btn btn-dark" >Logout</button>
         </form> 
+        
       </div>
       <% }; %>     
     </div>
