--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,8 +8,6 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls_new">Create New URL</a>
-        <a class="nav-item nav-link" href="/register">Register</a>
-        <a class="nav-item nav-link" href="/login">Login</a>
       </div>
     </div>
 
@@ -19,11 +17,23 @@
         
         <form class="form-inline" action="/logout" method="POST">
           <span style = "padding-right: 10px;">Logged In As: <%= user.email %></span>
-          <button type="submit" class="btn btn-dark" >Logout</button>
+          <button type="submit" class="btn btn-danger" >Logout</button>
         </form> 
         
       </div>
-      <% }; %>     
+      <% } else { %>
+        <div class = "form-inline">
+          <form action="/register" method="GET">
+            <button style ="margin-inline-end: 10px" type ="submit" class="btn btn-primary" >Register</button>
+          </form> 
+
+          <form class="form-inline" action="/login" method="GET">
+            <button type="submit" class="btn btn-primary" >Login</button>
+          </form> 
+        </div>
+      <% } %> 
+      
+      
     </div>
 
   </nav>
