--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -27,12 +27,11 @@
             <button style ="margin-inline-end: 10px" type ="submit" class="btn btn-primary" >Register</button>
           </form> 
 
-          <form class="form-inline" action="/login" method="GET">
+          <form action="/login" method="GET">
             <button type="submit" class="btn btn-primary" >Login</button>
           </form> 
         </div>
       <% } %> 
-      
       
     </div>
 
