--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -17,7 +17,7 @@
 
       <div class="card-footer text-muted text-center" >
         <!-- Button to update the long URL link -->
-          <h3 class = "card-title"> Edit </h3>
+          <h3 class = "card-title"> Update </h3>
           <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
             <div class = "form-group mb3" style = "width: 350px; margin:auto"> 
               <label class = "card-text" for="newLongURL" >New URL:</label>
