Added method-override to the project folder so that we can use app.delete and app.put, changed the app.post handling the deletion to an app.delete.

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -17,6 +17,7 @@
 
       <div class="card-footer text-muted text-center" >
         <!-- Button to update the long URL link -->
+        <!-- CHANGE TO PUT -->
           <h3 class = "card-title"> Update </h3>
           <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
             <div class = "form-group mb3" style = "width: 350px; margin:auto"> 
