--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,7 +32,9 @@
               </form>
             </td>
             <td>
-              <form method="POST" action="/urls/<%= url %>/delete">
+              <!-- CHANGE TO DELETE -->
+              <form method="POST" action="/urls/<%= url %>/delete?_method=DELETE">
+                <input type="hidden" name="_method" value="DELETE">
                 <button type="submit" class="btn btn-outline-danger">Delete</button>
               </form>
             </td>
