--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -17,9 +17,9 @@
 
       <div class="card-footer text-muted text-center" >
         <!-- Button to update the long URL link -->
-        <!-- CHANGE TO PUT -->
           <h3 class = "card-title"> Update </h3>
-          <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
+          <form class="form-inline" action="/urls/<%= shortURL %>?_method=PUT" method="POST">
+            <input type="hidden" name="_method" value="PUT">
             <div class = "form-group mb3" style = "width: 350px; margin:auto"> 
               <label class = "card-text" for="newLongURL" >New URL:</label>
               <input class="form-control" type="text" name="newLongURL" placeholder="http://" style="width:  200px">
