--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -13,7 +13,7 @@
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
-        <p class="text-center">Visited: <%= visits %> times!</p>
+        <p class="text-center">Visited: <%= visits %> times by <%= visitors %> unique visitors!</p>
       </div>
 
       <div class="card-footer text-muted text-center" >
