--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -29,6 +29,24 @@
           </form>
       </div>
 
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Random Visitor ID</th>
+            <th scope="col">Timestamp</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for (let randomVisitor in allVisits) { %>
+          <tr>
+              <td style="text-align: center;"><%= randomVisitor %></td>
+              <td style="text-align: center;"><%= allVisits[randomVisitor] %></td>
+          </tr>
+            <% } %>
+        </tbody>
+      </table>
+     
+
   </div>
 
   <!-- Bootstrap JS -->
