--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,6 +19,9 @@
           <th scope="col">Long URL</th>
           <th scope="col">Edit</th>
           <th scope="col">Delete</th>
+          <th scope="col">Created on</th>
+          <th scope="col">Total Visits</th>
+          <th scope="col">Unique Visits</th>
         </tr>
       </thead>
       <tbody>
@@ -28,7 +31,7 @@
             <td><%= urls[url] %></td>
             <td>  
               <form method="GET" action="/urls/<%= url %>">
-                <button type="submit" class="btn btn-outline-primary">Edit</button>
+                <button type="submit" class="btn btn-outline-primary" >Edit</button>
               </form>
             </td>
             <td>
@@ -37,6 +40,9 @@
                 <button type="submit" class="btn btn-outline-danger">Delete</button>
               </form>
             </td>
+            <td><%= stretchInfo[url]['created'] %></td>
+            <td><%= stretchInfo[url]['visits'] %></td>
+            <td><%= stretchInfo[url]['visitors'].length %></td>
           </tr>
         <% } %>
       </tbody>
